--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "eslint": "9.19.0",
     "eslint-config-google": "0.14.0",
     "globals": "15.14.0",
+    "prisma": "5.22.0",
     "tsup": "6.6.3",
     "tsx": "3.12.3",
     "typescript": "4.9.5",
     "typescript-eslint": "8.23.0"
   },
   "dependencies": {
+    "@prisma/client": "5.22.0",
     "dotenv": "16.4.7",
     "fastify": "4.13.0",
     "zod": "3.24.1"
