--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "9.19.0",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "18.14.0",
     "@typescript-eslint/eslint-plugin": "8.23.0",
     "@typescript-eslint/parser": "8.23.0",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.22.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.4.7",
     "fastify": "4.13.0",
     "zod": "3.24.1"
