--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "eslint src -e .ts",
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run",
+    "teste:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +27,10 @@
     "tsup": "6.6.3",
     "tsx": "3.12.3",
     "typescript": "4.9.5",
-    "typescript-eslint": "8.23.0"
+    "typescript-eslint": "8.23.0",
+    "vite": "6.1.1",
+    "vite-tsconfig-paths": "5.1.3",
+    "vitest": "3.0.6"
   },
   "dependencies": {
     "@prisma/client": "5.22.0",
@@ -35,6 +40,6 @@
     "zod": "3.24.1"
   },
   "engines": {
-    "node": "18.14.0"
+    "node": "^18.14.0"
   }
 }
