--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "teste:watch": "vitest"
+    "teste:watch": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,8 @@
     "@types/node": "18.14.0",
     "@typescript-eslint/eslint-plugin": "8.23.0",
     "@typescript-eslint/parser": "8.23.0",
+    "@vitest/coverage-v8": "3.0.6",
+    "@vitest/ui": "3.0.6",
     "eslint": "9.19.0",
     "eslint-config-google": "0.14.0",
     "globals": "15.14.0",
